# LLVMpasses_HeterogeneousCompiler

./: README.md
Assign-staticVarSection/: CMakeLists.txt
Assign-staticVarSection/include/: AssignStaticVarSection.h
Assign-staticVarSection/src/: AssignStaticVarSection.cpp
Associate-stringLiteral/: CMakeLists.txt
Associate-stringLiteral/include/: AssociateStringLiteral.h
Associate-stringLiteral/src/: AssociateStringLiteral.cpp
example/: hellotest.c  randdp.c
